@@ -6,19 +6,23 @@ import uk.co.littlestickyleaves.aws.lambda.base.error.LambdaException;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
+import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
- * An implementation of the LambdaIOHandler interface using Java 1.1's HttpUrlConnection.
- * (I got fed up with trying various libraries which caused GraalVM to complain, so I did this old-school implementation.)
+ * An implementation of the LambdaIOHandler interface using Java 11's HttpClient.
  * Q. proper logging sensible or not?
  */
 public class LambdaIOHandlerSimple implements LambdaIOHandler {
 
     private static final String LAMBDA_RUNTIME_AWS_REQUEST_ID = "Lambda-Runtime-Aws-Request-Id";
+    private static final String APPLICATION_JSON_UTF8 = "application/json; utf-8";
 
     private static final String HTTP = "http://";
     private static final String RUNTIME = "/2018-06-01/runtime/";
@@ -27,11 +31,18 @@ public class LambdaIOHandlerSimple implements LambdaIOHandler {
     private static final String RESPONSE = "/response";
     private static final String INIT = "init";
     private static final String ERROR = "/error";
+    public static final String CONTENT_TYPE = "Content-Type";
+    public static final String LAMBDA_RUNTIME_FUNCTION_ERROR_TYPE = "Lambda-Runtime-Function-Error-Type";
+    public static final String UNHANDLED = "Unhandled";
 
+    private final HttpClient httpClient;
     private final String runtimeApiRoot;
     private final ErrorJsonProvider errorJsonProvider;
 
-    public LambdaIOHandlerSimple(String runtimeApiEndpoint, ErrorJsonProvider errorJsonProvider) {
+    public LambdaIOHandlerSimple(HttpClient httpClient,
+                                 String runtimeApiEndpoint,
+                                 ErrorJsonProvider errorJsonProvider) {
+        this.httpClient = httpClient;
         this.runtimeApiRoot = HTTP + runtimeApiEndpoint + RUNTIME;
         this.errorJsonProvider = errorJsonProvider;
     }
@@ -39,27 +50,27 @@ public class LambdaIOHandlerSimple implements LambdaIOHandler {
     @Override
     public LambdaInputWithId getLambdaInput() throws Exception {
         try {
-            URL inputUrl = new URL(runtimeApiRoot + INVOCATION + NEXT);
+            URI inputUri = URI.create(runtimeApiRoot + INVOCATION + NEXT);
+            System.out.println("Doing GET for next input at " + inputUri.getPath());
 
-            System.out.println("Doing GET for next input at " + inputUrl.toString());
+            HttpRequest httpRequest = HttpRequest.newBuilder(inputUri).GET().build();
+            HttpResponse<String> response = httpClient.send(httpRequest,
+                    HttpResponse.BodyHandlers.ofString());
 
-            HttpURLConnection httpURLConnection = (HttpURLConnection) inputUrl.openConnection();
-            httpURLConnection.setRequestMethod("GET");
-
-            int status = httpURLConnection.getResponseCode();
+            int status = response.statusCode();
+            String body = response.body();
 
             if (status > 299) {
-                handleHttpProblem("GET for input", status, httpURLConnection);
+                throw new LambdaException("GET for input on " + inputUri + " resulted in status code " + status +
+                        " with message: '" + body + "'");
             }
 
-            String awsRequestId = httpURLConnection.getHeaderField(LAMBDA_RUNTIME_AWS_REQUEST_ID);
-
-            if (awsRequestId == null) {
-                throwException("GET for input returned no header value for " + LAMBDA_RUNTIME_AWS_REQUEST_ID);
+            Optional<String> awsRequestId = response.headers().firstValue(LAMBDA_RUNTIME_AWS_REQUEST_ID);
+            if (awsRequestId.isEmpty()) {
+                throw new LambdaException("GET for input returned no header value for " + LAMBDA_RUNTIME_AWS_REQUEST_ID);
             }
 
-            String content = contentFromHttpUrlConnection(httpURLConnection, uncheckedInputStreamFetcher());
-            return new LambdaInputWithId(awsRequestId, content);
+            return new LambdaInputWithId(awsRequestId.get(), body);
 
         } catch (IOException exception) {
             throw new LambdaException("GET for input resulted in " + exception.getClass().getSimpleName() +
@@ -69,100 +80,72 @@ public class LambdaIOHandlerSimple implements LambdaIOHandler {
 
     @Override
     public void returnLambdaOutput(String awsRequestId, String result) throws Exception {
-        URL outputUrl = new URL(runtimeApiRoot + INVOCATION + awsRequestId + RESPONSE);
-        System.out.println("POSTing result for awsRequestId " + awsRequestId + " to " + outputUrl.toString() +
+        URI outputUri = URI.create(runtimeApiRoot + INVOCATION + awsRequestId + RESPONSE);
+        System.out.println("POSTing result for awsRequestId " + awsRequestId + " to " + outputUri.getPath() +
                 "\n" + result);
 
-        HttpURLConnection httpURLConnection = setUpPost(outputUrl, result, false);
+        HttpRequest httpRequest = createPostRequest(outputUri, result);
+        HttpResponse<String> response = httpClient.send(httpRequest,
+                HttpResponse.BodyHandlers.ofString());
 
-        int status = httpURLConnection.getResponseCode();
+        int status = response.statusCode();
 
         if (status > 299) {
-            handleHttpProblem("POSTing processed output for awsRequestId " + awsRequestId, status, httpURLConnection);
+            String errorMessage = "POSTing processed output for awsRequestId " + awsRequestId +
+                    " resulted in status code " + status +
+                    " with message: '" + response.body() + "'";
+            throw new LambdaException(errorMessage);
         }
     }
 
     @Override
     public void returnInvocationError(String awsRequestId, Exception exception) throws Exception {
-        URL outputUrl = new URL(runtimeApiRoot + INVOCATION + awsRequestId + ERROR);
-        System.out.println("POSTing invocation error for awsRequestId " + awsRequestId + " to " + outputUrl.toString() +
+        URI outputUri = URI.create(runtimeApiRoot + INVOCATION + awsRequestId + ERROR);
+        System.out.println("POSTing invocation error for awsRequestId " + awsRequestId + " to " + outputUri.getPath() +
                 " with message '" + exception.getMessage() + "'");
 
         String payload = errorJsonProvider.transform(exception);
-        HttpURLConnection httpURLConnection = setUpPost(outputUrl, payload, true);
+        HttpRequest httpRequest = createPostRequest(outputUri, payload, true);
+        HttpResponse<String> response = httpClient.send(httpRequest,
+                HttpResponse.BodyHandlers.ofString());
 
-        int status = httpURLConnection.getResponseCode();
+        int status = response.statusCode();
         if (status > 299) {
-            handleHttpProblem("POSTing invocation error for awsRequestId " + awsRequestId, status, httpURLConnection);
+            throw new LambdaException("POSTing invocation error for awsRequestId " + awsRequestId +
+                    " resulted in status code " + status +
+                    " with message: '" + response.body() + "'");
         }
 
-        System.out.println("Posted processing error for " + awsRequestId + ", receiving: " + status); // proper logging
+        System.out.println("Posted processing error for " + awsRequestId + ", receiving: " + status);
     }
 
     @Override
     public void returnInitializationError(Exception exception) throws Exception {
-        URL outputUrl = new URL(runtimeApiRoot + INIT + ERROR);
-        System.out.println("POSTing initialization error to " + outputUrl.toString() +
+        URI outputUri = URI.create(runtimeApiRoot + INIT + ERROR);
+        System.out.println("POSTing initialization error to " + outputUri.getPath() +
                 " with message '" + exception.getMessage() + "'");
 
         String payload = errorJsonProvider.transform(exception);
+        HttpRequest httpRequest = createPostRequest(outputUri, payload, true);
+        HttpResponse<String> response = httpClient.send(httpRequest,
+                HttpResponse.BodyHandlers.ofString());
 
-        HttpURLConnection httpURLConnection = setUpPost(outputUrl, payload, true);
-        int status = httpURLConnection.getResponseCode();
-
-        throwException("Runtime unable to continue.  POSTed initialization error, receiving status: " + status);
+        throw new LambdaException("Runtime unable to continue.  POSTed initialization error, receiving status: " +
+                response.statusCode());
     }
 
-    private String contentFromHttpUrlConnection(HttpURLConnection connection,
-                                                Function<HttpURLConnection, InputStream> streamFetcher) throws IOException {
-        try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(streamFetcher.apply(connection)))) {
-            return bufferedReader.lines()
-                    .collect(Collectors.joining(System.lineSeparator()));
+    private HttpRequest createPostRequest(URI uri, String content) {
+        return createPostRequest(uri, content, false);
+    }
+
+    private HttpRequest createPostRequest(URI uri, String content, boolean unhandledError) {
+        HttpRequest.Builder builder = HttpRequest.newBuilder(uri)
+                .POST(HttpRequest.BodyPublishers.ofString(content, StandardCharsets.UTF_8))
+                .header(CONTENT_TYPE, APPLICATION_JSON_UTF8);
+        if (unhandledError) {
+            builder.header(LAMBDA_RUNTIME_FUNCTION_ERROR_TYPE, UNHANDLED);
         }
-    }
-
-    private void handleHttpProblem(String action, int statusCode, HttpURLConnection httpURLConnection) throws LambdaException {
-        String errorMessage = action + " resulted in status code " + statusCode;
-        try {
-            String errorContent = contentFromHttpUrlConnection(httpURLConnection, HttpURLConnection::getErrorStream);
-            errorMessage += " with message: '" + errorContent;
-        } catch (IOException e) {
-            errorMessage += ": unable to read message because of " + e.getClass().getSimpleName() + " with message '" +
-                    e.getMessage();
-        }
-        errorMessage += "'. Exiting with exception";
-        throwException(errorMessage);
-    }
-
-    private void throwException(String errorMessage) throws LambdaException {
-        System.out.println(errorMessage); // todo proper logging?
-        throw new LambdaException(errorMessage);
-    }
-
-    private HttpURLConnection setUpPost(URL url, String payloadString, boolean error) throws IOException {
-        byte[] payloadBytes = payloadString.getBytes(StandardCharsets.UTF_8);
-        HttpURLConnection httpURLConnection = (HttpURLConnection) url.openConnection();
-        httpURLConnection.setRequestMethod("POST");
-        httpURLConnection.setRequestProperty("Content-Type", "application/json; utf-8");
-        if (error) {
-            httpURLConnection.setRequestProperty("Lambda-Runtime-Function-Error-Type", "Unhandled");
-        }
-        httpURLConnection.setDoOutput(true);
-
-        try (OutputStream outputStream = httpURLConnection.getOutputStream()) {
-            outputStream.write(payloadBytes, 0, payloadBytes.length);
-        }
-        return httpURLConnection;
-    }
-
-    private Function<HttpURLConnection, InputStream> uncheckedInputStreamFetcher() {
-        return httpUrlConnection -> {
-            try {
-                return httpUrlConnection.getInputStream();
-            } catch (IOException e) {
-                throw new UncheckedIOException(e);
-            }
-        };
+        return builder.build();
     }
 
 }
